--- a/order-details.html
+++ b/order-details.html
@@ -48,6 +48,7 @@
 
     /* Agar header tabel muncul di setiap halaman cetak */
     @media print {
+      #print-pdf-btn {
       thead { 
         display: table-header-group; 
       }
@@ -57,6 +58,7 @@
       button {
         display: none; /* sembunyikan tombol saat print */
       }
+      }   
     }
   </style>
 </head>
