--- a/order-details.html
+++ b/order-details.html
@@ -70,7 +70,7 @@
   <!-- Tombol Print PDF -->
   <button id="print-pdf-btn">
     <img src="https://cdn-icons-png.flaticon.com/512/2099/2099058.png" alt="download icon"/>
-    Print PDF
+    Download PDF
   </button>
 
   <!-- Tabel Order Details -->
