--- a/order-details.html
+++ b/order-details.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Order Details</title>
+  <title>Order Details & Quotation</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -45,14 +45,13 @@
       height: 16px;
       margin-right: 5px;
     }
-
-    /* Agar tombol print tidak tercetak */
+    /* Sembunyikan tombol print pada saat cetak */
     @media print {
       #print-pdf-btn {
-        display: none; /* sembunyikan tombol saat print */
+        display: none;
       }
       thead {
-        display: table-header-group; /* agar header tabel muncul di setiap halaman */
+        display: table-header-group;
       }
       tfoot {
         display: table-footer-group;
@@ -89,6 +88,20 @@
     </tbody>
   </table>
 
+  <!-- Tabel Quotation (Grand Total) -->
+  <table id="quotation-table" style="margin-top:20px;">
+    <thead>
+      <tr>
+        <th>Grand Total</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td id="grand-total">N/A</td>
+      </tr>
+    </tbody>
+  </table>
+
   <script>
     // Ambil parameter dari URL
     const params = new URLSearchParams(window.location.search);
@@ -98,18 +111,21 @@
       return decodeURIComponent(params.get(key) || "N/A");
     }
 
-    // 1) Tampilkan nama customer
+    // Tampilkan nama customer
     const customerName = decodeParam("customer_name");
     document.getElementById("customer-headline").textContent = "Customer: " + customerName;
 
-    // 2) Ambil data orders (contoh: gabungan delimiter ';' & '|')
+    // Ambil data orders dengan asumsi format:
+    // "001|1/15/2025, 12:00:00 AM|Gold|20|Jakarta|Papua|300 USD;002|1/16/2025, 1:00:00 PM|Silver|10|Bandung|Surabaya|200 USD"
     const ordersString = decodeParam("orders");
     const tableBody = document.getElementById("orders-table-body");
+
+    let grandTotal = 0;
+    let currency = ""; // asumsi semua order menggunakan mata uang yang sama
 
     if (ordersString === "N/A" || ordersString.trim() === "") {
       tableBody.innerHTML = "<tr><td colspan='7'>No orders found</td></tr>";
     } else {
-      // Misal format: "001|1/15/2025|Gold|20|Jakarta|Papua|4628571 IDR;002|1/16/2025|Silver|10|Bandung|Surabaya|2000000 IDR"
       const rows = ordersString.split(";");
       rows.forEach(rowStr => {
         const cols = rowStr.split("|");
@@ -119,9 +135,9 @@
         const quantity  = cols[3] || "N/A";
         const fromLoc   = cols[4] || "N/A";
         const toLoc     = cols[5] || "N/A";
-        const totalCost = cols[6] || "N/A";
+        const totalCostStr = cols[6] || "N/A";
 
-        // (Opsional) Format tanggal
+        // Format tanggal
         let formattedDate = rawDate;
         const dateObj = new Date(rawDate);
         if (!isNaN(dateObj)) {
@@ -129,7 +145,7 @@
           formattedDate = dateObj.toLocaleDateString('en-US', options);
         }
 
-        // Tambahkan baris ke tabel
+        // Tambahkan baris ke tabel order
         const rowHTML = `
           <tr>
             <td>${orderId}</td>
@@ -138,14 +154,35 @@
             <td>${quantity}</td>
             <td>${fromLoc}</td>
             <td>${toLoc}</td>
-            <td>${totalCost}</td>
+            <td>${totalCostStr}</td>
           </tr>
         `;
         tableBody.innerHTML += rowHTML;
+
+        // Proses total cost: asumsikan format "300 USD"
+        if(totalCostStr !== "N/A"){
+          // Hapus koma jika ada, dan pisahkan nilai dan currency
+          const cleaned = totalCostStr.replace(/,/g, "");
+          const parts = cleaned.split(" ");
+          const value = parseFloat(parts[0]);
+          if (!isNaN(value)) {
+            grandTotal += value;
+          }
+          if (!currency && parts.length > 1) {
+            currency = parts.slice(1).join(" ");
+          }
+        }
       });
     }
 
-    // 3) Fungsi memanggil dialog print
+    // Tampilkan grand total di tabel quotation
+    if(grandTotal === 0){
+      document.getElementById("grand-total").textContent = "N/A";
+    } else {
+      document.getElementById("grand-total").textContent = grandTotal + " " + (currency || "");
+    }
+
+    // Tombol Print PDF: panggil window.print()
     document.getElementById("print-pdf-btn").addEventListener("click", () => {
       window.print();
     });
