--- a/order-details.html
+++ b/order-details.html
@@ -207,7 +207,7 @@
       // Gabungkan format angka + currency
       const formattedNumber = formatNumberWithCommas(grandTotal);
       grandTotalCell.textContent = currency 
-        ? ${formattedNumber} ${currency} 
+        ? '${formattedNumber} ${currency}' 
         : formattedNumber;
     }
 
